<resources>
    <string name="app_name">Back To Life</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capacity">50</string>
    <string name="date">12/06/2023</string>
    <string name="title1">Relaxation</string>
    <string name="title2">Nature</string>
    <string name="title4">Rania</string>
    <string name="title5">Sawssen</string>
    <string name="title3">Hamza</string>
    <string name="titre">Relaxation</string>
    <string name="titre1">Nature</string>
    <string name="angry">hey im angry</string>
    <string name="sad">hey im sad</string>
    <string name="happy">hey im happy</string>

    <string name="depressed"> Depression : 10% </string>
    <string name="elevated"> Elevation : 50% </string>
    <string name="irritability"> Irritability : 0% </string>
    <string name="psychotic"> Psychotic symptoms:  no </string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_heading">Find Amazing therapies happening around you.</string>
    <string name="dashboard_sub_title">my list of therapies</string>
    <string name="search_bar_hint">search for an event...</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan in nisl nisi scelerisque eu. Semper feugiat nibh sed pulvinar proin gravida. Quisque sagittis purus sit amet. Faucibus turpis in eu mi bibendum. Quisque egestas diam in arcu cursus euismod quis viverra. Dictumst quisque sagittis purus sit amet volutpat consequat. Tristique risus nec feugiat in. Nunc id cursus metus aliquam. Fames ac turpis egestas maecenas pharetra convallis posuere morbi leo. Leo integer malesuada nunc vel. Ac feugiat sed lectus vestibulum mattis ullamcorper velit. Pulvinar etiam non quam lacus suspendisse faucibus. Donec pretium vulputate sapien nec sagittis aliquam malesuada bibendum. Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Vehicula ipsum a arcu cursus vitae congue. Ultrices dui sapien eget mi proin sed libero enim. Fermentum iaculis eu non diam phasellus. Vitae semper quis lectus nulla. Eget aliquet nibh praesent tristique magna sit amet purus.</string>
    <string name="facebook_application_id">1184426499116164</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="logout">Logout</string>


    <string name="infos"> If you are logging in as a Patient  just click next \n If you are a doctor , check the box </string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="no_internet_img">no internet img</string>
    <string name="no_internet">No internet!!</string>

    <string name="str_end">Stop</string>
    <string name="str_start">Start</string>
    <string name="page_title">Home</string>
    <string name="page_reports">Reports</string>
    <string name="page_events">List</string>
    <string name="vi">"https://happy.videvo.net/videvo_files/video/premium/partners0211/large_watermarked/BB_baafc586–3959-4a2d-be68-e1c248e390d6_preview.mp4"</string>

</resources>