<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/smokyWhite"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/smokyWhite">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/back"
            app:expandedTitleTextAppearance="@style/expandedBarTextStyle"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/dashboard_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/custom_app_bar_background"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:id="@+id/serch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/dashboard_heading"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tool"
                    android:layout_width="378dp"
                    android:layout_height="?attr/actionBarSize"

                    >


                    <EditText
                        android:id="@+id/searchProductsBar1"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:height="50dp"
                        android:background="@drawable/search_bar_background"
                        android:hint="@string/search_bar_hint"

                        android:paddingLeft="20dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white">

                    </EditText>


                    <ImageView
                        android:id="@+id/serchh"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/search_btn">

                    </ImageView>

                </androidx.appcompat.widget.Toolbar>


            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="152dp"
        app:layout_anchor="@+id/scrollView2"
        app:layout_anchorGravity="center">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleDoctor"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>

    <!--    will be implementing recycler view insted of nested scroll view-->




</androidx.coordinatorlayout.widget.CoordinatorLayout>